--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,7 +288,7 @@ main {
     height: 400px;
   }
   .cards .bg-card {
-    background-image: url("/interactive-card-details-form-main/images/bg-main-mobile.png");
+    background-image: url("/images/bg-main-mobile.png");
     width: 100%;
     height: 200px;
   }
