--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -327,7 +327,7 @@ main{
         width: 100vw;
         height: 400px;
         .bg-card{
-            background-image: url('/interactive-card-details-form-main/images/bg-main-mobile.png');
+            background-image: url('/images/bg-main-mobile.png');
             width: 100%;
             height: 200px;
         }
